--- a/VTA/Views/Shared/_Layout.cshtml
+++ b/VTA/Views/Shared/_Layout.cshtml
@@ -29,6 +29,11 @@
                         </li>
                         
                     </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login"> Logout </a> 
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
